Get no param constructor & allow an array of strings for channel.